--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ color: rgba(17, 17, 17, 0.8) !important;
 .navbar-brand p{
     font-size: 20px !important;
     font-weight: 400;
+    color: #414141;
 }
 
 .btn{
